syntax = "proto3";
package user;
import "utils/proto/gogo/enum.proto";
import "utils/proto/go/go.proto";

option (gogo.enum_gqlgen_all) = true;
//写在这里必然要暴露出去
option java_package = "xyz.hoper.protobuf.user";
option go_package = "github.com/liov/hoper/go/v2/protobuf/user";

//用户操作
enum Action {
    option (go.enum) = {stringer_name: 'OrigString'};
    Signup = 0 [(gogo.enumvalue_cn)= "注册"];
    Active = 1 [(gogo.enumvalue_cn)= "激活"];
    RestPassword = 2 [(gogo.enumvalue_cn)= "重置密码"];
    EditPassword = 3 [(gogo.enumvalue_cn)= "修改密码"];
    CreateResume = 4 [(gogo.enumvalue_cn)= "新建简历"];
    EditResume = 5 [(gogo.enumvalue_cn)= "编辑简历"];
    DELETEResume = 6 [(gogo.enumvalue_cn)= "删除简历"];
}
//用户角色
enum Role {
    option (go.enum) = {stringer_name: 'OrigString'};
    UserRoleNormal = 0 [(gogo.enumvalue_cn)= "普通用户"];
    UserRoleAdmin = 1 [(gogo.enumvalue_cn)= "管理员"];
    UserRoleSuperAdmin = 2 [(gogo.enumvalue_cn)= "超级管理员"];
}

//用户性别
enum Gender{
    option (go.enum) = {stringer_name: 'OrigString'};
    GenderUnfilled = 0 [(gogo.enumvalue_cn)= "未填"];
    GenderMale = 1 [(gogo.enumvalue_cn)= "男"];
    GenderFemale = 2 [(gogo.enumvalue_cn)= "女"];
}

//用户角色
enum UserStatus {
    option (go.enum) = {stringer_name: 'OrigString'};
    option (gogo.enum_jsonmarshal) = false;
    InActive = 0 [(gogo.enumvalue_cn)= "未激活"];
    Activated = 1 [(gogo.enumvalue_cn)= "已激活"];
    Frozen = 2 [(gogo.enumvalue_cn)= "已冻结"];
}

//封禁类型
enum BannedType{
    option (go.enum) = {stringer_name: 'OrigString'};
    option (gogo.enum_jsonmarshal) = false;
    Post = 0 [(gogo.enumvalue_cn)= "禁言"];
    Login = 1 [(gogo.enumvalue_cn)= "禁止登录"];
}

enum UserErr {
    option (go.enum) = {stringer_name: 'OrigString'};
    option (gogo.enum_errorcode) = true;
    option (gogo.enum_jsonmarshal) = false;
    UserErrZero = 0 [(gogo.enumvalue_cn)= ""];
    LoginError = 1000 [(gogo.enumvalue_cn)= "用户名或密码错误"];
    LoginTimeout = 1001 [(gogo.enumvalue_cn)= "登录超时"];
    NoActive = 1002 [(gogo.enumvalue_cn)= "未激活账号"];
    NoAuthority = 1003 [(gogo.enumvalue_cn)= "无权限"];
    InvalidToken = 10004 [(gogo.enumvalue_cn)= "Token错误"];
    NoLogin = 10005 [(gogo.enumvalue_cn)= "未登录"];

    TokenTimeout = 10002 [(gogo.enumvalue_cn)= "Token已超时"];
    GenerateTokenFail = 10003 [(gogo.enumvalue_cn)= "Token生成失败"];
}